--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="inputnamewindow">
             <div class="message"><span>Kumusta! </span><span style="color: #baeaad">Ano po ang iyong pangalan?</span></div>
             <input id="inputname" type="text" placeholder="Input your name here..." maxlength="10"><br>
-            <input class="submit" onclick="submit()" type="button" value="DONE!">
+            <input id="submit" onclick="submit()" type="button" value="DONE!">
         </div>
     </body>
 </html>
