--- a/page2.html
+++ b/page2.html
@@ -10,9 +10,13 @@
             <div class="hi">Hey <span id="name"></span>!</div>
             <div class="itapon">Itapon natin sa tamang lalagyan ang...</div>
             <div class="billones">Basura ni Billones!</div>
-            <input class="continue" onclick="next()" type="button" value="continue...">
+            <span>
+                <input id="back" onclick="back()" type="button" value="<">
+                <input id="continue" onclick="next()" type="button" value="continue...">
+            </span>
         </div>
         <img src="images/landfill.png" class="landfill">
         <img src="images/bins.png" class="bins">
+        <img src="images/billones/throw.gif" class="throw">
     </body>
 </html>
