--- a/page3.html
+++ b/page3.html
@@ -8,8 +8,13 @@
         <script src="script/page3.js"></script>
         <div class="introduction">
             <div class="title">INTRODUCTION</div>
-            <div class="content">*content*</div>
-            <input class="continue" onclick="next()" type="button" value="continue...">
+            <div class="content">
+                Plastic pollution has been a problem the world has struggled with for decades. Every year, 23  million tonnes of plastic waste leaks into aquatic ecosystems, polluting our lakes, rivers, and seas. Poor waste management helps in causing climate change, as well as air pollution, loss of habitats, water and soil contamination, alongside diseases like tuberculosis, pneumonia, and influenza. Pisay suffers from this problem as well, with people not knowing proper waste disposal, leading to bins full of mixed-up trash and additional labor for our utility workers. As the scholars’ pledge goes, we should be committed to the perpetration of the human race and the preservation of the universe that is its home. This project aims to educate or remind students and everyone about the importance of proper segregation and waste disposal.
+            </div>
+            <span>
+                <input id="back" onclick="back()" type="button" value="<">
+                <input id="continue" onclick="next()" type="button" value="continue...">
+            </span>        
         </div>
     </body>
 </html>
