--- a/page2.html
+++ b/page2.html
@@ -15,8 +15,8 @@
                 <input id="continue" onclick="next()" type="button" value="continue...">
             </span>
         </div>
-        <img src="images/landfill.png" class="landfill">
-        <img src="images/bins.png" class="bins">
-        <img src="images/billones/throw.gif" class="throw">
+        <img src="images/landfill.png" class="landfill" draggable="false">
+        <img src="images/bins.png" class="bins" draggable="false">
+        <img src="images/billones/throw.gif" class="throw" draggable="false">
     </body>
 </html>
