--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <script src="script/index.js"></script>
         <div class="inputnamewindow">
-            <div class="message"><span>Kumusta! </span><span style="color: #baeaad">Ano po ang iyong pangalan?</span></div>
-            <input id="inputname" type="text" placeholder="Input your name here..." maxlength="10"><br>
-            <input id="submit" onclick="submit()" type="button" value="DONE!">
+            <div class="message"><span>Kumusta! </span><span style="color: #000000">Ano po ang iyong pangalan?</span></div>
+            <input id="inputname" type="text" placeholder="..." maxlength="10"><br>
+            <input id="submit" onclick="submit()" type="button" value="Done!">
         </div>
     </body>
 </html>
