--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project 3.0</title>
+        <title>Basura ni Billones</title>
         <link rel="stylesheet" href="styles/page2.css">
     </head>
     <body onload="showname()">
