--- a/page3.html
+++ b/page3.html
@@ -26,7 +26,7 @@
         <div id="inpshs">
             <div class="title">— SEGREGATION PROBLEM IN PSHS —</div>
             <div class="content">
-                Pisay suffers from this problem as well, with people not knowing proper waste disposal, leading to bins full of mixed-up trash and additional labor for our utility workers. As the scholars’ pledge goes, we should be committed to the perpetration of the human race and the preservation of the universe that is its home. This project aims to educate or remind students and everyone about the proper ways of segregation and waste disposal.
+                Pisay suffers from this problem as well, with people not knowing proper waste disposal, leading to bins full of mixed-up trash and additional labor for our utility workers. As the scholars’ pledge goes, we should be committed to the perpetuation of the human race and the preservation of the universe that is its home. This project aims to educate or remind students and everyone about the proper ways of segregation and waste disposal.
             </div>
             <span>
                 <a href="#introduction">
